<resources>
    <string name="app_name">Aiderv1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter all the details!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="firstname_hint">First Name</string>
    <string name="surname_hint">Last Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="address1_hint">Address</string>
    <string name="address2_hint">Address</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="zip_hint">Zip Code</string>
    <string name="new_line">\u000A</string>
    <!--From stezziebranch-->
    <!-- TODO: Remove or change this placeholder text -->
    <!--string name="hello_blank_fragment">Hello blank fragment</string-->
    <!--END stezziebranch - a line from default scaffold yes?-->

    <!--current code in main-->
    <string name="sign_title">Aider</string>
    <string name="sign_subtitle">SignUp to Connect with Family</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_home">Home</string>
    <!--END current code in main-->
    <string name="startLocation">Start Location</string>
    <string name="stopLocation">Stop Location</string>


</resources>