<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.murrays.aiderv1.MainActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        android:fontFamily="@font/custom_font"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="100"
        android:title="@string/action_calendar"
        android:fontFamily="@font/custom_font"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:fontFamily="@font/custom_font"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

</menu>